--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,9 @@
       </label>
       <button class="button" type="submit">Search</button>
     </form>
-    <div class="loader"></div>
     <ul class="list"></ul>
+    <div class="loader"></div>
+    <button class="button load-more" type="button">Load more</button>
     <script type="module" src="./main.js"></script>
     <script type="module" src="./js/pixabay-api.js"></script>
     <script type="module" src="./js/render-functions.js"></script>
