--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
       </label>
       <button class="button" type="submit">Search</button>
     </form>
+    <div class="loader-top"></div>
     <ul class="list"></ul>
     <div class="loader"></div>
     <button class="button load-more" type="button">Load more</button>
